Fixes filter nav and content-nav display on mobile device.

--- a/xadmin/static/xadmin/css/xadmin.main.css
+++ b/xadmin/static/xadmin/css/xadmin.main.css
@@ -6,6 +6,7 @@ a { cursor: pointer;}
 }
 .popover.dropdown-menu {
   padding: 0px;
+  max-width: none;
 }
 .popover.right.dropdown-menu {
   margin-top: -35px;
@@ -20,68 +21,74 @@ a { cursor: pointer;}
 .popover.dropdown-menu form{
   margin: 6px 0;
 }
-#filter-menu .filter-date .menu-choice-date .popover {
-  width: 260px;
+.popover.dropdown-menu form input {
+  min-width: 120px;
 }
-.filter-date .menu-choice-date .choice-year {
-  width: 38px;
+.popover.dropdown-menu form > .input-group {
+  width: 100%;
 }
-.filter-date .menu-choice-date .choice-month,
-.filter-date .menu-choice-date .choice-day {
-  width: 22px;
+.popover.dropdown-menu form > .btn {
+  margin-top: 10px;
 }
-.filter-date .menu-choice-date button {
-  margin-top: 0px;
-}
-
-.filter-date .menu-date-range .dropdown-menu {
-  width: 605px;
-  left: 10px;
-  top: 30px;
-}
-.filter-date .menu-date-range .ranges{
-  margin: 10px;
-  width: 115px;
-  float: left;
-}
-.filter-date .menu-date-range .daterangepicker{
-  float: right;
+.popover.dropdown-menu form > .input-group + .input-group {
+  margin-top: 5px;
 }
 
-.filter-date .menu-date-range .dropdown-menu:before {
-  position: absolute;
-  top: -7px;
-  left: 9px;
-  display: inline-block;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #ccc;
-  border-left: 7px solid transparent;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  content: '';
+.filter-date .menu-choice-date .input-group-addon {
+  width: 40px;
+  text-align: right;
 }
-
-.filter-date .menu-date-range .dropdown-menu:after {
-  position: absolute;
-  top: -6px;
-  left: 10px;
-  display: inline-block;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid #fff;
-  border-left: 6px solid transparent;
-  content: '';
+.filter-date .menu-date-range .ranges .btn{
+  margin-top: 10px;
+}
+@media (min-width: 768px) {
+  .filter-date .menu-date-range .dropdown-menu {
+    width: 600px;
+    left: 10px;
+    top: 35px;
+  }
+  .filter-date .menu-date-range .dropdown-menu:before {
+    position: absolute;
+    top: -7px;
+    left: 9px;
+    display: inline-block;
+    border-right: 7px solid transparent;
+    border-bottom: 7px solid #ccc;
+    border-left: 7px solid transparent;
+    border-bottom-color: rgba(0, 0, 0, 0.2);
+    content: '';
+  }
+  .filter-date .menu-date-range .dropdown-menu:after {
+    position: absolute;
+    top: -6px;
+    left: 10px;
+    display: inline-block;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid #fff;
+    border-left: 6px solid transparent;
+    content: '';
+  }
+}
+@media (max-width: 767px) {
+  .filter-date .menu-date-range .datepicker-inline{
+    width: auto;
+  }
+  .filter-date .menu-date-range .table-condensed{
+    width: 100%;
+  }
 }
 
 .filter-fk-search .select-search{
   min-width: 160px;
 }
-
-.filters .dropdown-submenu:hover > .dropdown-menu {
-  display: none;
+.filter-char form input.input-char{
+  min-width: 180px;
+}
+.filter-number form .input-group-btn > .btn {
+  width: 34px;
+  text-align: center;
 }
 
-.filters .dropdown-submenu.open > .dropdown-menu {
-  display: block;
-}
 
 .panel .panel-heading .icon{
   float: right;
@@ -154,7 +161,7 @@ a { cursor: pointer;}
 
 /* search form */
 .input-group.search-group{
-  max-width: 200px;
+  width: 220px;
 }
 
 /* results table */
@@ -271,7 +278,9 @@ a[class^="icon-"]:before, a[class*=" icon-"]:before {
 .pagination.pagination-inline{margin-top: 0px; margin-bottom: 10px;}
 .modal { overflow-y: auto;}
 .dropdown {position: relative;}
-
+.input-group-btn:not(:first-child):not(:last-child) > .btn{
+  border-radius: 0px;
+}
 .dropdown-submenu:hover > .dropdown-menu {
   display: none;
 }
